[gd_scene load_steps=3 format=3 uid="uid://e8b23sy6v3g5"]

[ext_resource type="Script" path="res://scripts/game_over_ui.gd" id="1_game_over_ui"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.05, 0.05, 0.1, 0.95)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(1, 0.3, 0.3, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[node name="GameOverUI" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_game_over_ui")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="TitleLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_font_sizes/font_size = 48
text = "GAME OVER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatsContainer" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 15
alignment = 1

[node name="KillsLabel" type="Label" parent="Panel/VBoxContainer/StatsContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 28
text = "Kills: 0"
horizontal_alignment = 1

[node name="TimeLabel" type="Label" parent="Panel/VBoxContainer/StatsContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 28
text = "Time Survived: 00:00"
horizontal_alignment = 1

[node name="LevelLabel" type="Label" parent="Panel/VBoxContainer/StatsContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 28
text = "Level Reached: 1"
horizontal_alignment = 1

[node name="HighScoresLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0.2, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 18
text = "High Scores - Kills: 0 | Time: 00:00 | Level: 1"
horizontal_alignment = 1

[node name="ButtonContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="RestartButton" type="Button" parent="Panel/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Restart"

[node name="QuitButton" type="Button" parent="Panel/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Quit"

